--- a/edge_device/platformio.ini
+++ b/edge_device/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = adafruit_feather_esp32s3_nopsram
 framework = arduino
+build_flags = -DARDUINO_USB_MODE=1
 lib_deps = 
 	adafruit/Adafruit SHT31 Library@^2.2.0
 	adafruit/Adafruit DotStar@^1.2.2
