--- a/edge_device/platformio.ini
+++ b/edge_device/platformio.ini
@@ -16,3 +16,5 @@ build_flags = -DARDUINO_USB_MODE=1
 lib_deps = 
 	adafruit/Adafruit DotStar@^1.2.2
 	adafruit/Adafruit SHT31 Library@^2.2.0
+	bblanchon/ArduinoJson@^6.20.1
+	
