--- a/edge_device/platformio.ini
+++ b/edge_device/platformio.ini
@@ -17,4 +17,4 @@ lib_deps =
 	adafruit/Adafruit DotStar@^1.2.2
 	adafruit/Adafruit SHT31 Library@^2.2.0
 	bblanchon/ArduinoJson@^6.20.1
-	
+	adafruit/Adafruit LTR329 and LTR303@^2.0.0
